# Mandelbrot-set

./: .gitignore  CMakeLists.txt  README.md
include/: mandelbrot.hpp
src/: main.cpp  mandelbrot.cpp
